syntax = "proto3";

package storage.v1;

option java_multiple_files = true;
option java_outer_classname = "StorageProto";
option java_package = "com.nickdala.protobuf.storage.v1";

message UploadRequest {
  string file_name = 1;
  string file_content = 2;
}

message UploadResponse {
  string message = 1;
}

message DownloadRequest {
  string file_name = 1;
}

message DownloadResponse {
  string file_content = 1;
}

message ListFilesRequest {
}

message ListFilesResponse {
  repeated string file_names = 1;
}

service StorageService {
  rpc Upload(UploadRequest) returns (UploadResponse);
  rpc Download(DownloadRequest) returns (DownloadResponse);
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
}